ndiswrapper (1.52-1) UNRELEASED; urgency=low

  * (NOT RELEASED YET) New upstream release

 -- Kel Modderman <kel@otaku42.de>  Mon, 04 Feb 2008 14:27:33 +1000

ndiswrapper (1.51-1) unstable; urgency=low

  * New upstream release
  * update standards version to 3.7.3, no changes necessary.

 -- Kel Modderman <kel@otaku42.de>  Sun, 23 Dec 2007 00:20:49 +1000

ndiswrapper (1.50-1) unstable; urgency=low

  * New upstream release.
  * Fix tarball name in README.Debian,
    s/ndiswrapper-source.tar.bz2/ndiswrapper.tar.bz2/.
  * Use relative dirname in debian/ndiswrapper-source.dirs

 -- Kel Modderman <kel@otaku42.de>  Fri, 30 Nov 2007 22:15:20 +1000

ndiswrapper (1.49-1) unstable; urgency=low

  * New upstream release.

 -- Kel Modderman <kel@otaku42.de>  Tue, 30 Oct 2007 20:29:05 +1000

ndiswrapper (1.49~rc4-1) unstable; urgency=low

  * New upstream release candidate.
  * Support for Linux 2.6.23. (Closes: #446359)
  * Use Homepage: field of debian control instead of pseudo standard with
    double spacing and paragraph break for each binary package.
  * Drop debian/patches/kbuild-only.patch, applied upstream.
  * Fix DIST_DESTDIR target in debian/rules.modules to prevent installation of
    module to "odd" path. (Closes: #395081)
  * Add Vcs debian/control tokens to reflect current maintenance archive.
  * Extended description no longer states that full kernel source is required
    to compile this module. It also capitalizes "linux". (Closes: #420688)
  * Recommend wireless-tools. (Closes: #444613)
  * Install debianized ndiswrapper tarball to /usr/src/ndiswrapper.tar.bz2 and
    not /usr/src/ndiswrapper-source.tar.bz2; this is a pseudo-guideline for
    module packages now.

 -- Kel Modderman <kel@otaku42.de>  Tue, 16 Oct 2007 16:12:01 +1000

ndiswrapper (1.47-2) unstable; urgency=low

  * Define KBUILD, KSRC and KVERS everytime we use upstream Makefile on module
    build to avoid failure due to increased sanity checking.
