@@ -1,31 +1,33 @@
 #!/usr/bin/make -f
 
-include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/rules/simple-patchsys.mk
-include /usr/share/cdbs/1/class/makefile.mk
+# Uncomment this to turn on verbose mode.
+#export DH_VERBOSE=1
 
-DEB_MAKE_INVOKE = $(MAKE) -C utils
+include /usr/share/quilt/quilt.make
 
-install/ndiswrapper-source::
-	# Enforce executable bit on debian/rules, and create directory
-	# structure for modules source
-	install -D -m 0755 debian/rules.modules \
-		debian/tmp/modules/ndiswrapper/debian/rules
+build: build-stamp
+build-stamp: $(QUILT_STAMPFN)
+	dh_testdir
 	
-	# Prepare the other debian stuff
-	for f in *.modules.in control compat copyright changelog; do \
-		install -m 0644 debian/$$f \
-			debian/tmp/modules/ndiswrapper/debian/; \
-	done
+	$(MAKE) -C utils
 	
-	# Prepare upstream source
-	install driver/Makefile driver/*.[chS] debian/tmp/modules/ndiswrapper/
-	
-	# Prepare the debian source tarball
-	tar jcf debian/ndiswrapper-source/usr/src/ndiswrapper.tar.bz2 \
-		-C debian/tmp modules
+	touch $@
 
-install/ndiswrapper-utils-1.9::
+clean: unpatch
+	dh_testdir
+	dh_testroot
+	
+	$(MAKE) -C utils distclean
+	
+	dh_clean build-stamp install-stamp
+
+install: build install-stamp
+install-stamp:
+	dh_testdir
+	dh_testroot
+	dh_clean -k
+	
+	# ndiswrapper-utils
 	install -D -m755 utils/loadndisdriver \
 		debian/ndiswrapper-utils-1.9/sbin/loadndisdriver-1.9
 	install -D -m755 utils/ndiswrapper \
@@ -34,3 +36,54 @@ install/ndiswrapper-utils-1.9::
 		debian/ndiswrapper-utils-1.9/usr/share/man/man8/loadndisdriver-1.9.8
 	install -D -m644 ndiswrapper.8 \
 		debian/ndiswrapper-utils-1.9/usr/share/man/man8/ndiswrapper-1.9.8
+	
+	# ndiswrapper-source
+	install -D -m 0755 debian/rules.modules \
+		debian/tmp/modules/ndiswrapper/debian/rules
+	
+	for f in *.modules.in control compat copyright changelog; do \
+		install -m 0644 debian/$$f \
+			debian/tmp/modules/ndiswrapper/debian/; \
+	done
+	
+	install driver/Makefile driver/*.[chS] debian/tmp/modules/ndiswrapper/
+	
+	mkdir -p debian/ndiswrapper-source/usr/src/
+	tar jcf debian/ndiswrapper-source/usr/src/ndiswrapper.tar.bz2 \
+		-C debian/tmp modules
+	
+	touch $@
+
+binary-arch:
+	dh_testdir
+	dh_testroot
+	dh_installdirs
+	dh_install
+	dh_installman
+	dh_installdocs
+	dh_installchangelogs ChangeLog
+	dh_strip
+	dh_compress
+	dh_fixperms
+	dh_installdeb
+	dh_shlibdeps
+	dh_gencontrol
+	dh_md5sums
+	dh_builddeb
+
+binary-indep: build install
+	dh_testdir
+	dh_testroot
+	dh_install
+	dh_installdocs
+	dh_installchangelogs ChangeLog
+	dh_link
+	dh_compress
+	dh_fixperms
+	dh_installdeb
+	dh_gencontrol
+	dh_md5sums
+	dh_builddeb
+
+binary: binary-indep binary-arch
+.PHONY: build clean install binary-indep binary-arch binary
